--- a/YOLOv7_Model.ipynb
+++ b/YOLOv7_Model.ipynb
@@ -117,7 +117,7 @@
         "!pip install torch torchvision pycocotools\n",
         "\n",
         "from roboflow import Roboflow\n",
-        "rf = Roboflow(api_key=\"4CuOiVnuJ6mWT9dWBo3u\")\n",
+        "rf = Roboflow(api_key=\"-----\")\n",
         "project = rf.workspace(\"bird-fgiys\").project(\"bird-sbweq\")\n",
         "dataset = project.version(2).download(\"yolov7\")\n"
       ]
